[gd_scene load_steps=12 format=3 uid="uid://dr1gsov87s7xw"]

[ext_resource type="Script" path="res://scenes/workshops/pod.gd" id="1_7k4fg"]
[ext_resource type="Texture2D" uid="uid://bkeb4o8koxtow" path="res://assets/sprites/machines/income_pod.png" id="2_7rahq"]
[ext_resource type="Resource" uid="uid://ju5p3xs3dj8y" path="res://scenes/item/data/Human.tres" id="2_ivyp2"]
[ext_resource type="Resource" path="res://scenes/item/data/ideas.tres" id="4_hsev4"]
[ext_resource type="Resource" path="res://scenes/item/data/Tools.tres" id="5_5j60e"]
[ext_resource type="PackedScene" path="res://scenes/ui/WorkShopInfo.tscn" id="7_6cem4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_batji"]
atlas = ExtResource("2_7rahq")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_80sme"]
atlas = ExtResource("2_7rahq")
region = Rect2(32, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_og8y4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_batji")
}],
"loop": true,
"name": &"Empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80sme")
}],
"loop": true,
"name": &"Full",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aagux"]
size = Vector2(22, 31)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l7xhm"]
radius = 22.0
height = 44.0

[node name="Pod" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_7k4fg")
machine_name = "Human Pod"
input_area = NodePath("InteractionArea")
output_spot = NodePath("Marker2D")
sprite = NodePath("AnimatedSprite2D")
produces_list = Array[Resource]([ExtResource("2_ivyp2")])
production_time = 25.0
upgrades = Array[Dictionary]([{
ExtResource("4_hsev4"): 1,
ExtResource("5_5j60e"): 1
}, {
ExtResource("4_hsev4"): 2
}])
endless_production = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_og8y4")
animation = &"Empty"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_aagux")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_l7xhm")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 24)

[node name="WorkShopInfo" parent="." instance=ExtResource("7_6cem4")]
visible = false
offset_left = -32.0
offset_top = -115.0
offset_right = 41.0
offset_bottom = -45.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
